--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     build:
       context: .
     volumes:
-      - .:/home/test_autofilter
+      - .:/home/autofilter
     command: uvicorn autofilter.adapters.create_app:app --host 0.0.0.0 --port 9600
     network_mode: "host"
