feat: queryform with hardcoded values

--- a/client/ui/package.json
+++ b/client/ui/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ma-hackathon/auto-filter": "file:../library",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
